--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "6to5": "^1.10.10",
+    "sinon": "^1.11.1",
     "tap-spec": "^1.0.1",
     "tape": "^3.0.2"
   }
